removed two api calls, added space between club buttons for create and import, club popup flicker fix

--- a/app/modules/new-dashboard/common/profile-groups/styles.scss
+++ b/app/modules/new-dashboard/common/profile-groups/styles.scss
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: row;
 
+  .club-btn-mar-10{
+    margin-right: 10px !important;
+  }
   // .club-btn {
   //   margin: 10px 0 0 10px;
   // }
